Single person chat and group added
Client:
	2 new classes have been added CreateChatMenu and CreateGroupMenu;
	Controller:
		-added new method createChat() which creates a chat with 1 person;
		-added method getCurrentUser().
	UIClient: getCreateChatEvent() now creates a window with the choice
	 to create a chat or a group.

Server:
	ClientHandler: added instructions on how to create a chat or group.

Shared:
	added Chat class - chat with 1 person;
	old Chat class renamed to Group
	RequestResponse: add CREATE_CHAT.